REGRESSION(r99025-r99037): platform/mac/accessibility/select-element-selection-with-optgroups.html is asserting https://bugs.webkit.org/show_bug.cgi?id=71421

Reviewed by Ryosuke Niwa.

Source/WebCore:

Remove an assert that was added by r99035. It was added based on a comment in the code, but not tested.

* html/HTMLSelectElement.cpp:
(WebCore::HTMLSelectElement::selectOption):

LayoutTests:

Re-enable test after removing an erroneous assert.

* platform/mac/test_expectations.txt:



Canonical link: https://commits.webkit.org/88087@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99514 268f45cc-cd09-0410-ab3c-d52691b4dbfc